--- a/getallapk/app/src/main/res/layout/dialog_confirmation.xml
+++ b/getallapk/app/src/main/res/layout/dialog_confirmation.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -14,7 +15,7 @@
             android:gravity="center"
             android:paddingTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <TextView
             android:layout_centerHorizontal="true"
@@ -24,14 +25,14 @@
             android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="50dp"/>
+            android:minHeight="50dp" />
 
         <View
             android:layout_below="@+id/tv_content"
             android:id="@+id/view_horizontal"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@android:color/darker_gray"/>
+            android:background="@android:color/darker_gray" />
 
         <TextView
             android:layout_marginBottom="10dp"
