--- a/getallapk/app/src/main/res/layout/item_menu.xml
+++ b/getallapk/app/src/main/res/layout/item_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -13,5 +12,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:text="@string/app_name"
-        android:padding="@dimen/menu_title_margin"/>
+        android:padding="@dimen/menu_title_margin" />
 </LinearLayout>
