--- a/player_mp3/app/src/main/res/layout/fragment_detail_mp3.xml
+++ b/player_mp3/app/src/main/res/layout/fragment_detail_mp3.xml
@@ -2,54 +2,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:circular="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black">
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="3dp"
-        android:background="#513252">
+        android:background="@color/bg_color">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/blog_detail_bg"
-            android:scaleType="centerCrop"/>
+            android:layout_margin="32dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/blog_detail_bg" />
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:background="@android:color/transparent">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
-
-                <TextView
-                    android:id="@+id/tvContent"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="30dp"
-                    android:text="... ... ..."/>
-
-                <ImageView
-                    android:id="@+id/btnSave"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/star_disable"
-                    android:paddingTop="10dp"
-                    android:paddingLeft="10dp"/>
-            </RelativeLayout>
+            android:background="@android:color/transparent"
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -59,13 +38,13 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    android:background="@color/black"/>
+                    android:background="@color/black" />
 
                 <ProgressBar
                     android:id="@+id/progressBar"
+                    style="@style/CustomProgressBar"
                     android:layout_width="fill_parent"
-                    android:layout_height="2dp"
-                    style="@style/CustomProgressBar" />
+                    android:layout_height="2dp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -82,10 +61,10 @@
 
                     <com.lylc.widget.circularprogressbar.CircularProgressBar
                         android:id="@+id/circularprogressbar"
-                        android:layout_centerInParent="true"
                         style="@style/Widget.ProgressBar.Holo.CircularProgressBar"
                         android:layout_width="170dp"
                         android:layout_height="170dp"
+                        android:layout_centerInParent="true"
                         circular:cpb_subtitle="subtitle"
                         circular:cpb_title="Title" />
 
@@ -116,57 +95,74 @@
                                 android:id="@+id/btnPlayPause"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/btn_pause"
-                                android:layout_gravity="bottom"/>
+                                android:layout_gravity="bottom"
+                                android:src="@drawable/btn_pause" />
                         </LinearLayout>
 
                         <TextView
                             android:id="@+id/tvTitle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:singleLine="true"
+                            android:layout_weight="1"
                             android:ellipsize="marquee"
-                            android:marqueeRepeatLimit ="marquee_forever"
                             android:focusable="true"
                             android:focusableInTouchMode="true"
-                            android:scrollHorizontally="true"
                             android:gravity="center"
+                            android:marqueeRepeatLimit="marquee_forever"
+                            android:scrollHorizontally="true"
+                            android:singleLine="true"
                             android:text="... ... ..."
-                            android:textStyle="bold"
                             android:textColor="@color/white"
                             android:textSize="16sp"
-                            android:layout_weight="1"/>
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tvTime"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:singleLine="true"
+                            android:layout_weight="1"
                             android:gravity="center_horizontal"
+                            android:singleLine="true"
                             android:text="00:00"
-                            android:textStyle="bold"
                             android:textColor="@color/white"
                             android:textSize="26sp"
-                            android:layout_weight="1"/>
+                            android:textStyle="bold" />
                     </LinearLayout>
                 </RelativeLayout>
 
                 <ImageView
-                    android:id="@+id/btnGoBack"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/btn_pre"
+                    android:id="@+id/btn_prev"
+                    android:layout_width="40dp"
+                    android:layout_height="60dp"
                     android:layout_centerVertical="true"
-                    android:paddingLeft="30dp"/>
+                    android:layout_marginStart="10dp"
+                    circular:srcCompat="@android:drawable/ic_media_previous" />
+
+                <ImageView
+                    android:id="@+id/btnGoBack"
+                    android:layout_width="20dp"
+                    android:layout_height="60dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="60dp"
+                    android:src="@drawable/btn_pre" />
 
                 <ImageView
                     android:id="@+id/btnGoForward"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/btn_next"
-                    android:layout_alignParentRight="true"
+                    android:layout_width="20dp"
+                    android:layout_height="60dp"
+                    android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:paddingRight="30dp"/>
+                    android:layout_marginEnd="60dp"
+                    android:src="@drawable/btn_next" />
+
+                <ImageView
+                    android:id="@+id/btn_next"
+                    android:layout_width="40dp"
+                    android:layout_height="60dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="10dp"
+                    circular:srcCompat="@android:drawable/ic_media_next" />
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
