--- a/getfaceimage/app/src/main/res/layout/recyclerview_item.xml
+++ b/getfaceimage/app/src/main/res/layout/recyclerview_item.xml
@@ -11,6 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:background="@color/colorAccent"
+        android:scaleType="centerCrop"
         android:adjustViewBounds="true" />
 </LinearLayout>
